<resources>
    <string name="app_name">JogjaStudy</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="LOGIN">LOGIN</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="RememberMe">Remember Me</string>
    <string name="SIGNIN">SIGN IN</string>
    <string name="OrLoginwith">Or Login with</string>
    <string name="haveanaccount">Dont have an account? Sign Up</string>
    <string name="ForgetPassword">Forgot Password?</string>
    <string name="IAggrement">I agree to the Terms of Service</string>
    <string name="signup">SIGN UP</string>
    <string name="haveaccount">Already a member? Login Here</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="MyAccount">My Account</string>
    <string name="iniversity">University</string>
    <string name="about">About</string>
    <string name="university">University</string>


    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 8 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_login">Already a member? Login Here</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_send">Send</string>
    <string name="btn_change">Change</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="back"><![CDATA[<<BACK]]></string>
    <string name="logout">Logout</string>

    <string name="logo_description">About page logo</string>
    <string name="item_icon_description">Item icon description</string>

    <string name="title_email">Contact us by email</string>
    <string name="title_facebook">Like our page on Facebook</string>
    <string name="title_github">Fork this project on Github</string>
    <string name="title_instagram">Follow us on Instagram</string>
    <string name="title_playstore">Rate us on the PlayStore</string>
    <string name="title_twitter">Follow us on Twitter</string>
    <string name="title_website">Visit our website</string>
    <string name="title_youtube">Follow us on Youtube</string>
    <string name="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="register">REGISTER</string>

    <string name="open_navigation">Open Navigation</string>
    <string name="country">Country :</string>
    <string name="comment">Comment</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <string name="smartphone">Smartphone</string>
    <string name="place">Place</string>
    <string name="friend">Friend</string>
    <string name="contact">Contact us</string>
    <string name="view_one">View One</string>
    <string name="version">Version</string>
    <string name="author">Author</string>
    <string name="alert_text">Enter some text</string>
    <string name="some_text">Some Text</string>
    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce lacus nisl, venenatis accumsan fermentum sed, auctor ut magna. Integer ante erat, fermentum id feugiat quis, tristique eu tortor. Cras vel sodales diam, ut imperdiet urna. Proin et nisl vitae ante scelerisque commodo ornare vel tortor. In eget viverra nisl, eu pellentesque nisi. Donec molestie metus sed mauris sagittis, sed vestibulum ante rhoncus. Aenean vel neque id magna pretium viverra. Phasellus pellentesque faucibus urna, lacinia scelerisque sem condimentum ut. Praesent at arcu eu orci fringilla vehicula eu at ante. Nullam congue felis massa, at vehicula mauris efficitur egestas. In feugiat mi at orci ultricies porttitor. Mauris fermentum nunc dui, ut tincidunt libero cursus pretium. Quisque eu vestibulum sapien. Donec non tempus ex. Donec in accumsan elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aliquam facilisis maximus enim eget sagittis. Vestibulum tincidunt dolor sit amet interdum porta. Fusce eu odio sem. Proin non condimentum elit. Curabitur elit turpis, hendrerit eget velit et, sagittis pellentesque felis. Donec in euismod nibh. </string>
    <string name="title_activity_university_list">UniversityList</string>
    <string name="title_activity_university_grid">UniversityGrid</string>

    <string name="api_basicinfo">https://data.gov.in/node/2914041/datastore/export/json</string>
    <string name="api_hosteldetails">https://data.gov.in/node/2914061/datastore/export/json</string>
    <string name="api_accred">https://data.gov.in/node/2914381/datastore/export/json</string>

    <string-array name="indo_states">
        <item>Silahkan pilih kota dibawah</item>
        <item>Banda Aceh</item>
        <item>Medan</item>
        <item>Palembang</item>
        <item>Padang</item>
        <item>Bengkulu</item>
        <item>Pekanbaru</item>
        <item>Tanjung Pinang</item>
        <item>Jambi</item>
        <item>Bandar Lampung</item>
        <item>Pangkal Pinang</item>
        <item>Pontianak</item>
        <item>Samarinda</item>
        <item>Banjarmasin</item>
        <item>Palangkaraya</item>
        <item>Tanjung Selor</item>
        <item>Serang</item>
        <item>Jakarta</item>
        <item>Bandung</item>
        <item>Semarang</item>
        <item>Yogyakarta</item>
        <item>Surabaya</item>
        <item>Denpasar</item>
        <item>Kupang</item>
        <item>Mataram</item>
        <item>Gorontalo</item>
        <item>Mamuju</item>
        <item>Palu</item>
        <item>Manado</item>
        <item>Kendari</item>
        <item>Makassar</item>
        <item>Ternate</item>
        <item>Ambon</item>
        <item>Manokwari</item>
        <item>Uttrakhand</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
</resources>
